--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@quasar/extras": "^1.16.9",
     "boxicons": "^2.1.4",
     "firebase": "^10.7.1",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "quasar": "^2.14.2",
     "uuid": "^9.0.1",
     "vue": "^3.3.11",
